fix PropertyAll Image overlay issue with z-index

--- a/public/css/realtor.css
+++ b/public/css/realtor.css
@@ -55,6 +55,7 @@ body,
 /* navbar */
 #mainNavbar {
     height: 4rem;
+    z-index: 999;
 }
 
 .navbar-custom.scrolled,
